--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,151 +1,3 @@
-.body {
-  overflow-x: hidden;
-  background-color: #fcfcfc;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.text-about {
-  font-size: 16px;
-  font-weight: 300;
-  color: #636262;
-  width: 400px;
-  margin-right: 30px;
-  letter-spacing: 1px;
-}
-
-.content-desktop {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fff;
-  width: 100%;
-  margin-top: 140px;
-}
-
-.content-mobile {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fff;
-  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
-  width: 100%;
-  margin-top: 140px;
-}
-
-.about-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  width: 100%;
-  margin-bottom: 10px;
-}
-
-.animated-container {
-  height: 400px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.animated-heading {
-  color: #636262;
-  letter-spacing: 1px;
-  font-weight: 400;
-}
-
-.animated-heading-container {
-  z-index: 1;
-}
-
-.img-about {
-  border-radius: 10px;
-  margin-right: 20px;
-  margin-left: 30px;
-}
-
-.thumbnail-container {
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.img-slideshow {
-  width: 450px;
-}
-
-.img-slideshow-thumbnail {
-  width: 75px;
-  margin-left: 20px;
-}
-
-.page-seperator {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.page-seperator-1 {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.dividing-line-left {
-  border-bottom: 1px solid #bbb;
-  width: 42%;
-  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
-  margin-left: 20px;
-  margin-bottom: 15px;
-}
-
-.dividing-line-right {
-  border-bottom: 1px solid #bbb;
-  width: 42%;
-  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
-  margin-right: 20px;
-  margin-bottom: 15px;
-}
-
-.seperator-title {
-  margin: 0;
-  color: #636262;
-}
-
-.links {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-}
-
-.github-icon {
-  width: 100px;
-}
-
-.linkedin-icon {
-  width: 180px;
-}
-
-.gmail-icon {
-  margin-right: 20px;
-  width: 160px;
-}
-
 .header {
   position: absolute;
   width: 100%;
@@ -170,7 +22,7 @@
   letter-spacing: 1px;
 }
 
-.details {
+.header-content {
   height: 90px;
   display: flex;
   justify-content: center;
@@ -179,23 +31,16 @@
   letter-spacing: 1px;
 }
 
-.img-name {
+.header-img {
   width: 200px;
   margin-bottom: 15px;
 }
 
-.title {
+.header-title {
   font-size: 18px;
   font-weight: 300;
   margin: 0;
   color: #dddce8;
-}
-
-.title-black {
-  font-size: 18px;
-  font-weight: 300;
-  margin: 0;
-  color: white;
 }
 
 .nav-bar {
@@ -226,4 +71,268 @@
   text-decoration: none;
   color: white;
   background-color: #403f3d;
+}
+
+.body {
+  overflow-x: hidden;
+  background-color: #fff3d6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.content {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  width: 100%;
+  margin-top: 140px;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.about-text {
+  font-size: 16px;
+  font-weight: 300;
+  color: #636262;
+  width: 400px;
+  margin-right: 30px;
+  letter-spacing: 1px;
+}
+
+.about-img {
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 30px;
+}
+
+.thumbnail-container {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.thumbnail-img {
+  width: 75px;
+  margin-left: 20px;
+}
+
+.animated-container {
+  background-color: #fce5ac;
+  height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 0px 3px 11px -4px rgba(0,0,0,0.75);
+}
+
+.animated-heading {
+  color: #636262;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.img-slideshow {
+  width: 450px;
+}
+
+.cv-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.cv-image-large {
+  height: 850px;
+  width: 650px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+  margin-right: 20px;
+}
+
+.cv-image-small {
+  height: 400px;
+  width: 250px;
+  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
+}
+
+.expo-title {
+  font-size: 18px;
+  font-weight: 300;
+  margin: 0;
+  color: white;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.github-icon {
+  width: 100px;
+}
+
+.linkedin-icon {
+  width: 180px;
+}
+
+.gmail-icon {
+  margin-right: 20px;
+  width: 160px;
+}
+
+.seperator {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.seperator-line-left {
+  border-bottom: 1px solid #bbb;
+  width: 42%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-line-right {
+  border-bottom: 1px solid #bbb;
+  width: 42%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-right: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-title {
+  margin: 0;
+  color: #636262;
+}
+
+/* ------------------------------------ Mobile ----------------------------------------------- */
+
+.about-text-mobile {
+  font-size: 12px;
+  font-weight: 300;
+  color: #636262;
+  width: 400px;
+  margin-right: 30px;
+  letter-spacing: 1px;
+  margin-top: 0;
+}
+
+.about-img-mobile {
+  width: 100px;
+  height: 140px;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 30px;
+}
+
+.header-img-mobile {
+  width: 150px;
+  margin-bottom: 15px;
+}
+
+.header-title-mobile {
+  font-size: 14px;
+  font-weight: 300;
+  margin: 0;
+  color: #dddce8;
+}
+
+.nav-item-mobile {
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100px;
+  text-decoration: none;
+  color: #dddce8;
+  border-radius: 3px;
+}
+
+.nav-bar-mobile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+}
+
+.content-mobile {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px 0px rgba(186,182,186,1);
+  width: 100%;
+  margin-top: 140px;
+}
+
+.thumbnail-img-mobile {
+  width: 50px;
+  margin-left: 10px;
+}
+
+.animated-heading-mobile {
+  font-size: 12px;
+  color: #636262;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.img-slideshow-mobile {
+  width: 250px;
+}
+
+.seperator-mobile {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.seperator-line-left-mobile {
+  border-bottom: 1px solid #bbb;
+  width: 30%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-line-right-mobile {
+  border-bottom: 1px solid #bbb;
+  width: 30%;
+  box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
+  margin-right: 20px;
+  margin-bottom: 15px;
+}
+
+.seperator-title-mobile {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  margin-top: 0;
+  color: #636262;
+  font-size: 16px;
 }
